[package]
name = "ejkore-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ejkore-game = { path = "../game" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "Performance",
    "EventTarget",
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "GamepadEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "Storage",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlAudioElement",
    "Location",
    "MediaError",
] }
js-sys = "0.3"
matchbox_socket = "0.10"
wasm-bindgen-futures = "0.4"
